--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "all": "^0.0.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "firebase": "^10.7.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.4",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
@@ -21,6 +28,7 @@
     "react-slick": "^0.29.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "routes": "^2.1.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
@@ -28,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon index.mjs"
   },
   "eslintConfig": {
     "extends": [
